minor changes to layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<body >
 		<div class="dt-ns dt--fixed-ns">
-			<div class="dtc-ns tc pv4 bg-black-05">
+			<div class="dtc-ns tc pv4">
 			    <form id="registrar" class="pa4 black-80">
 				  <div class="measure">
 				    <label for="name" class="f6 b db mb2">What R U Buying? <span class="normal black-60"></span></label>
@@ -32,7 +32,7 @@
 			</div>
 
 			</div>
-			<div class="dtc-ns tc pv4 bg-black-05">
+			<div class="dtc-ns tc pv4 ">
 			    <article class="pa3 pa5-ns">
 				  <h1 class="f4 bold center mw6">Shopping List</h1><a class="f6 link dim ph3 pv2 mb2 dib white bg-black" href="#0">Calc</a>
 				  <ul id="shoppingList" class="list pl0 ml0 center mw6 ba b--light-silver br2">
@@ -40,9 +40,10 @@
 				  </ul>
 				</article>
 			</div>
-			<div class="dtc-ns tc pv4 bg-black-05">
+			<div class="dtc-ns tc pv4 ">
 			    
 				<section class="performance-facts">
+				<div id="nutrition_wrapper">
 				  <header class="performance-facts__header">
 				    <h1 class="performance-facts__title">Grocery Cart Nutrition Facts</h1>
 				    <p>Serving Size 1/2 cup (about 82g)</p>
@@ -247,7 +248,7 @@
 				    &bull;
 				    Protein 4
 				  </p>
-				  
+				  </div>
 				</section>
 		</div>
 	</div>
