added placeholders for nutrition facts in display

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				<div id="nutrition_wrapper">
 				  <header class="performance-facts__header">
 				    <h1 class="performance-facts__title">Grocery Cart Nutrition Facts</h1>
-				    <p>Serving Size 1/2 cup (about 82g)</p>
-				    <p>Serving Per Container 8</p>
+				    <p>A weeks worth</p>
+				    <p>of groceries</p>
 				  </header>
 				  <table class="performance-facts__table">
 				    <thead>
@@ -61,11 +61,11 @@
 				      <tr>
 				        <th colspan="2">
 				          <b>Calories</b>
-				          200
+				          14,000
 				        </th>
 				        <td>
 				          Calories from Fat
-				          130
+				          ???
 				        </td>
 				      </tr>
 				      <tr class="thick-row">
@@ -76,10 +76,10 @@
 				      <tr>
 				        <th colspan="2">
 				          <b>Total Fat</b>
-				          14g
+				          ???
 				        </th>
 				        <td>
-				          <b>22%</b>
+				          <b>???</b>
 				        </td>
 				      </tr>
 				      <tr>
@@ -87,10 +87,10 @@
 				        </td>
 				        <th>
 				          Saturated Fat
-				          9g
+				          ???
 				        </th>
 				        <td>
-				          <b>22%</b>
+				          <b>???</b>
 				        </td>
 				      </tr>
 				      <tr>
@@ -98,7 +98,7 @@
 				        </td>
 				        <th>
 				          Trans Fat
-				          0g
+				          ???
 				        </th>
 				        <td>
 				        </td>
@@ -106,28 +106,28 @@
 				      <tr>
 				        <th colspan="2">
 				          <b>Cholesterol</b>
-				          55mg
+				          ???
 				        </th>
 				        <td>
-				          <b>18%</b>
+				          <b>???</b>
 				        </td>
 				      </tr>
 				      <tr>
 				        <th colspan="2">
 				          <b>Sodium</b>
-				          40mg
+				          ???
 				        </th>
 				        <td>
-				          <b>2%</b>
+				          <b>???</b>
 				        </td>
 				      </tr>
 				      <tr>
 				        <th colspan="2">
 				          <b>Total Carbohydrate</b>
-				          17g
+				          ???
 				        </th>
 				        <td>
-				          <b>6%</b>
+				          <b>???</b>
 				        </td>
 				      </tr>
 				      <tr>
@@ -135,10 +135,10 @@
 				        </td>
 				        <th>
 				          Dietary Fiber
-				          1g
+				          ???
 				        </th>
 				        <td>
-				          <b>4%</b>
+				          <b>???</b>
 				        </td>
 				      </tr>
 				      <tr>
@@ -146,7 +146,7 @@
 				        </td>
 				        <th>
 				          Sugars
-				          14g
+				          ???
 				        </th>
 				        <td>
 				        </td>
@@ -154,7 +154,7 @@
 				      <tr class="thick-end">
 				        <th colspan="2">
 				          <b>Protein</b>
-				          3g
+				          ???
 				        </th>
 				        <td>
 				        </td>
@@ -167,21 +167,21 @@
 				      <tr>
 				        <td colspan="2">
 				          Vitamin A
-				          10%
+				          ???
 				        </td>
 				        <td>
 				          Vitamin C
-				          0%
+				          ???
 				        </td>
 				      </tr>
 				      <tr class="thin-end">
 				        <td colspan="2">
 				          Calcium
-				          10%
+				          ???
 				        </td>
 				        <td>
 				          Iron
-				          6%
+				          ???
 				        </td>
 				      </tr>
 				    </tbody>
@@ -242,11 +242,11 @@
 				    Calories per gram:
 				  </p>
 				  <p class="small-info text-center">
-				    Fat 9
+				    Fat ???
 				    &bull;
-				    Carbohydrate 4
+				    Carbohydrate ???
 				    &bull;
-				    Protein 4
+				    Protein ???
 				  </p>
 				  </div>
 				</section>
