added daily value data

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 			<div class="dtc-ns tc pv4 ">
 			    <article class="pa3 pa5-ns">
-				  <h1 class="f4 bold center mw6">Shopping List</h1><a class="f6 link dim ph3 pv2 mb2 dib white bg-black" href="#0">Calc</a>
+				  <h1 class="f4 bold center mw6">Shopping List</h1><a id="calcNutrition" class="f6 link dim ph3 pv2 mb2 dib white bg-black" href="#0">Calc</a>
 				  <ul id="shoppingList" class="list pl0 ml0 center mw6 ba b--light-silver br2">
 				    
 				  </ul>
